twitter-clone-2026/deploy/k8s/03-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: twitter-clone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      # Init Container для исправления прав доступа
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            exec:
              command: 
                - "pg_isready"
                - "-U"
                - "skillbox"        # <--- БЫЛО: postgres
                - "-d"
                - "twitter_clone_db" # <--- ДОБАВИЛ: имя базы для точности
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command: 
                - "pg_isready"
                - "-U"
                - "skillbox"        # <--- БЫЛО: postgres
                - "-d"
                - "twitter_clone_db" # <--- ДОБАВИЛ: имя базы для точности
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: twitter-clone
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
