twitter-clone-2026/deploy/k8s/11-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twitter-ingress
  namespace: twitter-clone
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "twitter.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
