twitter-clone-2026/deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twitter-ingress
  namespace: twitter-clone
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "twitter.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service  # Сначала идем в Nginx (Frontend)
            port:
              number: 80
      # Если нужно прямое обращение к API без Nginx балансировки:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
